Notebook: small fix

--- a/notebooks/imdb_distilbert_training.ipynb
+++ b/notebooks/imdb_distilbert_training.ipynb
@@ -11,15 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DistilBERT compresses the knowledge of BERT into a lighter, faster model—perfect for production inference.  \n",
+    "DistilBERT compresses the knowledge of BERT into a lighter, faster model.  \n",
     "This notebook documents **how we fine-tuned `distilbert-base-uncased` on the 50 k IMDb movie-review dataset for binary sentiment** and exported the resulting weights.\n",
     "\n",
     "**Pipeline overview**\n",
     "\n",
     "1. Load and stratify-split the IMDb dataset (90 % train / 10 % validation)  \n",
-    "2. Tokenise reviews with the DistilBERT tokenizer (`max_length = 256`)  \n",
+    "2. Tokenise reviews with the DistilBERT tokenizer (`max_length = 384`)  \n",
     "3. Train for three epochs with the Hugging Face *Trainer* API  \n",
-    "4. Evaluate (val accuracy ≈ 0.926, test accuracy ≈ 0.981)  \n",
+    "4. Evaluate (val accuracy ≈ 0.920, test accuracy ≈ 0.919)  \n",
     "5. Save the best checkpoint to `distilbert-imdb/` for deployment\n",
     "\n",
     "> *If you only need the trained model, download the release asset instead of re-running the heavy training step.*  \n",
@@ -98,7 +98,7 @@
     "def preprocess_batch(batch):\n",
     "    batch[\"label\"] = [label2id[s] for s in batch[\"sentiment\"]]\n",
     "    enc = tokenizer(batch[\"review\"], padding=\"max_length\",\n",
-    "                    truncation=True, max_length=256)\n",
+    "                    truncation=True, max_length=384)\n",
     "    batch.update(enc); return batch\n",
     "\n",
     "tokenized_train = train_ds.map(preprocess_batch, batched=True,\n",
@@ -306,7 +306,7 @@
     "    correct += int(np.sum(preds == labels))\n",
     "\n",
     "test_acc = correct / len(test_ds)\n",
-    "print(f\"✅ Test accuracy: {test_acc:.4f}\")\n"
+    "print(f\"Test accuracy: {test_acc:.4f}\")\n"
    ]
   }
  ],
